--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,23 @@ h1, h2 {
 .footer {
   height: 120px;
 }
+
+/* Contact Page */
+.border {
+     border-style: solid;
+  border-color: black;
+}
+
+.heading-contact {
+    text-decoration: underline;
+    color: var(--light-blue-color);
+    padding: 5px;
+}
+
+.contact-items {
+    font-size: 15px;
+}
+
+.button-contact {
+    margin-bottom: 3px;
+}
